--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "gulp-minify-html": "~0.1.6",
     "gulp-minify-css": "~0.3.11",
     "gulp-uglify": "~1.0.1",
-    "gulp-rev": "*"
+    "gulp-rev": "*",
+    "gulp-swig":"^0.7.4",
+    "gulp-html-prettify": "~0.0.1",
+    "gulp-rename": "~1.2.0"
   }
 }
